--- a/blogpost.html
+++ b/blogpost.html
@@ -1,13 +1,18 @@
 <html>
 
 <head>
-    <title>Este es un Blog</title>
+    <title>El Titulo del Post</title>
     <link rel="stylesheet" href="./css/estilos.css">
 </head>
 
 <body>
-    <h1>Aca vamos a poner un Post</h1>
-    <p>Este es el primer post</p>
+    <div id="container">
+        <div id="post">
+            <h1>Este es el Titulo Atractivo e Interesante del post</h1>
+            <p>Y este es el parrafo de inicio donde vamos a explicar cosas interesantes que se pueden hacer con ramas.</p>
+        </div>
+    </div>
+
 </body>
 
 </html>
